# lowres-rmx

./: .editorconfig  .gitignore  CMakeLists.txt
core/: core.c  core.h  core_delegate.c  core_delegate.h  pcg.h
core/datamanager/: data_manager.h
core/interpreter/: cmd_background.c  cmd_control.c  cmd_control.h  cmd_io.c  cmd_io.h  cmd_maths.c  cmd_maths.h  cmd_memory.c  cmd_particle.c  cmd_particle.h  cmd_screen.c  cmd_sprites.c  cmd_text.c  data.c  data.h  error.h  interpreter.c  interpreter.h  interpreter_config.h  token.c  token.h
core/libraries/: particles_lib.c  particles_lib.h  sprites_lib.c  startup_sequence.c  text_lib.c
core/machine/: io_chip.h  machine.c  machine.h  video_chip.c  video_chip.h
core/overlay/: overlay.c  overlay.h
docs/: manual.html
programs/: 001_SAVE_LOAD.nx  009_64_colors.nx  012_LOCATE.nx  013_SHOWN.nx  017_ON_GOTO.nx  019_ON_GOSUB.nx  023_SPRITE.nx  024_PARTICLE.nx  026_PLAY.nx  GFX_EDITOR.nx  Gfx Designer 2.0.nx  Star Scroller 1.2.nx
sdl/: config.h  main.c  system_paths.c
tests/: 002_ROM.nx
